Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9551

I/O errors when lustre uses multipath devices

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.12.0, Lustre 2.10.4
    • Lustre 2.7.0
    • None
    • CentOS Linux release 7.3.1611 (Core),OFED.3.4.2.0.0.1,lustre-2.7.19.8,Mellanox Technologies MT27500 Family

      When the lustre servers have OST configured with multipath devices, there are I/O errors that can lead to a server crash.

      The following error appears in the system log:
      Mar 31 00:02:44 oss01 kernel: blk_cloned_rq_check_limits: over max size limit.
      Mar 31 00:02:44 oss01 kernel: device-mapper: multipath: Failing path 8:160.

      Followed by several I/O errors
      Mar 31 00:17:30 oss01 kernel: blk_update_request: I/O error, dev dm-17, sector 1182279680
      Mar 31 00:17:30 oss01 kernel: blk_update_request: I/O error, dev dm-17, sector 1182291968
      Mar 31 00:17:30 oss01 kernel: blk_update_request: I/O error, dev dm-17, sector 1182267392
      Mar 31 00:17:30 oss01 kernel: blk_update_request: I/O error, dev dm-17, sector 1182304256
      Mar 30 21:04:22 oss01 kernel: LDISKFS-fs (dm-17): Remounting filesystem read-only

            utopiabound Nathaniel Clark
            shenxm xiangmin shen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: